@@ -57,6 +57,16 @@
             }
         }
 
+        /// <summary>
+        /// Shows a popup at the current mouse position.
+        /// </summary>
+        /// <param name="manager">The manager.</param>
+        /// <param name="rootModel">The root model.</param>
+        public static void ShowPopup(this IWindowManager manager, object rootModel)
+        {
+            manager.ShowPopup(rootModel, null);
+        }
+
 #if !SILVERLIGHT
 
         /// <summary>
