@@ -6,6 +6,7 @@ namespace Caliburn.PresentationFramework.ApplicationModel
     using System.ComponentModel;
     using System.Windows;
     using System.Windows.Controls;
+    using System.Windows.Controls.Primitives;
     using System.Windows.Data;
     using PresentationFramework.ApplicationModel;
     using Screens;
@@ -53,6 +54,49 @@ namespace Caliburn.PresentationFramework.ApplicationModel
             new WindowConductor(rootModel, view);
 
             view.Show();
+        }
+
+        /// <summary>
+        /// Shows a popup at the current mouse position.
+        /// </summary>
+        /// <param name="rootModel">The root model.</param>
+        /// <param name="context">The view context or optional popup target.</param>
+        public virtual void ShowPopup(object rootModel, object context) {
+            var popup = CreatePopup(rootModel, (context is UIElement) ? (UIElement)context : null);
+            var view = ViewLocator.LocateForModel(rootModel, popup, (context is UIElement) ? null : context);
+
+            popup.Child = (UIElement)view;
+            popup.SetValue(View.IsGeneratedProperty, true);
+
+            Binder.Bind(rootModel, popup, null);
+
+            var activatable = rootModel as IActivate;
+            if (activatable != null)
+                activatable.Activate();
+
+            var deactivator = rootModel as IDeactivate;
+            if (deactivator != null)
+                popup.Closed += delegate { deactivator.Deactivate(true); };
+
+            popup.IsOpen = true;
+            
+            var capture = view as UIElement;
+            if (capture != null)
+                capture.CaptureMouse();
+            else popup.CaptureMouse();
+        }
+
+        /// <summary>
+        /// Creates a popup for hosting a popup window.
+        /// </summary>
+        /// <param name="rootModel">The model.</param>
+        /// <param name="popupTarget">The optional popup target.</param>
+        /// <returns>The popup.</returns>
+        protected Popup CreatePopup(object rootModel, UIElement popupTarget) {
+            return new Popup {
+                HorizontalOffset = Mouse.Position.X,
+                VerticalOffset = Mouse.Position.Y
+            };
         }
 
 #if SILVERLIGHT_40
