@@ -83,6 +83,7 @@
     <Compile Include="ApplicationModel\IHandle.cs" />
     <Compile Include="ApplicationModel\IInputManager.cs" />
     <Compile Include="ApplicationModel\IShortcut.cs" />
+    <Compile Include="ApplicationModel\Mouse.silverlight.cs" />
     <Compile Include="Behaviors\DependencyMode.cs" />
     <Compile Include="Behaviors\DoNotNotifyAttribute.cs" />
     <Compile Include="Behaviors\NotifyPropertyChangedAttribute.cs" />
